...
    <string name="test_trip_details_calendar_select">Select</string>
    <string name="test_trip_details_calendar_cancel">Cancel</string>
    <string name="test_trip_details_city_input_validation">This field is empty</string>
    <string name="test_trip_details_miles">miles</string>

    //Button
    <string name="test_button_text_add">Add</string>
    <string name="test_button_text_edit">Edit</string>

    //Details tile list
    <string name="test_trip_details_tile_list_name_flight_details">Details flight</string>
    <string name="test_trip_details_supported_text_flight_details">You will find such flight details as names of cities, airports or the distance separating the place of departure and arrival.</string>
    <string name="test_trip_details_tile_list_name_important_notes">Important notes</string>
    <string name="test_trip_details_supported_text_important_notes">Here you can add your travel notes.</string>
    <string name="test_trip_details_tile_list_name_add_file">Files</string>
    <string name="test_trip_details_supported_text_list_name_add_file">Your space to add tickets and travel related documents.</string>
    <string name="test_trip_details_distance_between_cites">Distance between cities</string>
    <string name="test_trip_details_tile_list_name_add_flight_to_calendar">Add flight to calendar</string>
    <string name="test_trip_details_supported_text_list_name_add_flight_to_calendar">After clicking this button, we will ask for your consent to add the flight to your calendar, and then it will be added to it.</string>

    //Important notes
    <string name="test_blank_note_title">Title</string>
    <string name="test_blank_note_description">Description</string>
    <string name="test_important_notes_empty_state_text">You don\'t have notes</string>

    //File list
    <string name="test_file_title">Documents</string>
    <string name="test_file_empty_list">You don\'t have saved files</string>
    <string name="test_file_alert">Remember that you can only add files in PDF format</string>
...
