package com.example.wherenow.util.testutil

object TestTag {
    const val BACK_ICON_TAG = "backIconTag"
    const val BLANK_NOTE_TITLE_TAG = "blankNoteTitleTag"
    const val BLANK_NOTE_DESCRIPTION_TAG = "blankNoteDescriptionTag"
    const val BUTTON_TAG = "buttonTag"
    const val CHECKBOX_TAG = "Checkbox_"
    const val DATA_PICKER_TAG = "dataPickerTag"
    const val DELETE_FILE = "deleteFile"
    const val DELETE_TILE = "deleteTile"
    const val DETAILS_TILE = "detailsTile"
...
